--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter_rating_bar: ^4.0.0
   carousel_slider: ^4.0.0
   sizer: ^2.0.15
+  intl: ^0.17.0
   dio: ^4.0.4
   shared_preferences:
   firebase_auth:
