--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter_bloc: ^7.0.1
   flutter_rating_bar: ^4.0.0
   carousel_slider: ^4.0.0
+  flutter_facebook_auth: ^4.3.4
   sizer: ^2.0.15
   intl: ^0.17.0
   dio: ^4.0.4
